--- a/css/spp.css
+++ b/css/spp.css
@@ -23,3 +23,25 @@
       -webkit-box-shadow: 0px 0px 8px #85b2cb;
       box-shadow: 0px 0px 8px #85b2cb;
     }
+    
+    
+    
+    .centered-box{
+     background: white;
+      display: block;
+      height: 144px;
+      margin: auto;
+      
+      position: absolute;
+      left:0;
+      right: 0;
+      top: 0;
+      bottom: 0;  
+      border: black;
+      border-style: solid;
+      border-width: 1px;
+      width: 450px;
+      
+      -webkit-column-count: 1;
+      column-count: 1;
+    }
