using new router now

--- a/css/spp.css
+++ b/css/spp.css
@@ -44,8 +44,25 @@
       -webkit-column-count: 1;
       column-count: 1;
       
-      
+    }
     
+    .error-box{
+     background: white;
+      display: block;
+      height: 400px;
+      margin: auto;
       
+      position: absolute;
+      left:0;
+      right: 0;
+      top: 0;
+      bottom: 0;  
+      border: red;
+      border-style: solid;
+      border-width: 1px;
+      width: 800px;
+      
+      -webkit-column-count: 1;
+      column-count: 1;
       
     }
